k8s/access.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: access-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: access-api
  template:
    metadata:
      labels:
        app: access-api
    spec:
      containers:
        - name: access
          image: ghcr.io/v-serghei/access-api:develop
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: access-api
spec:
  selector:
    app: access-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
