k8s/bookmark.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookmark-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookmark-api
  template:
    metadata:
      labels:
        app: bookmark-api
    spec:
      containers:
        - name: bookmark
          image: ghcr.io/v-serghei/bookmark-api:develop
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: bookmark-api
spec:
  selector:
    app: bookmark-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
