k8s/friends.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: friends-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: friends-api
  template:
    metadata:
      labels:
        app: friends-api
    spec:
      containers:
        - name: friends
          image: ghcr.io/v-serghei/friends-api:develop
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: friends-api
spec:
  selector:
    app: friends-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
