k8s/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movienight-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movienight-gateway
  template:
    metadata:
      labels:
        app: movienight-gateway
    spec:
      containers:
        - name: gateway
          image: ghcr.io/v-serghei/movienight-gateway:develop
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: movienight-gateway
spec:
  selector:
    app: movienight-gateway
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
