k8s/movieplayer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movieplayer-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movieplayer-api
  template:
    metadata:
      labels:
        app: movieplayer-api
    spec:
      containers:
        - name: movieplayer
          image: ghcr.io/v-serghei/movieplayer-api:develop
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: movieplayer-api
spec:
  selector:
    app: movieplayer-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
