k8s/review.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: review-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: review-api
  template:
    metadata:
      labels:
        app: review-api
    spec:
      containers:
        - name: review
          image: ghcr.io/v-serghei/review-api:develop
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: review-api
spec:
  selector:
    app: review-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
