k8s/users.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-api
  template:
    metadata:
      labels:
        app: users-api
    spec:
      containers:
        - name: users
          image: ghcr.io/v-serghei/users-api:develop
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: users-api
spec:
  selector:
    app: users-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
