k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movienight
  namespace: movienight-dev
spec:
  ingressClassName: nginx
  rules:
    - host: movienight.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: movienight-gateway
                port:
                  number: 80
